# qilin

./: Cargo.toml
rules/custom/: linux_reverse_shell_oneliner.yar  mimikatz_strings.yar  powershell_encoded_command.yar  upx_packed_pe.yar
src/: db.rs  heuristics.rs  main.rs  scan.rs  yara_rules.rs
