[package]
name = "qilin"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive", "env"] }
csv = "1"
dirs = "5"
rayon = "1"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls", "gzip"] }
sha2 = "0.10"
walkdir = "2"
yara-x = "1.19.0"
